src/General/css/style.css
/* General */
.dialog {
  border: 1px solid;
  display: block;
}
.dialog:not(#qr):not(#thread-watcher):not(#header-bar) {
  box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
}
#qr, 
#thread-watcher {
  box-shadow: -1px 2px 2px rgba(0, 0, 0, 0.25);
}
.captcha-img,
.field {
  background-color: #FFF;
  border: 1px solid #CCC;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  color: #333;
  font: 13px sans-serif;
  outline: none;
  transition: color .25s, border-color .25s;
  transition: color .25s, border-color .25s;
}
.field::-moz-placeholder,
.field:hover::-moz-placeholder {
  color: #AAA !important;
  font-size: 13px !important;
  opacity: 1.0 !important;
}
.captch-img:hover,
.field:hover {
  border-color: #999;
}
.field:hover, .field:focus {
  color: #000;
}
.field[disabled] {
  background-color: #F2F2F2;
  color: #888;
}
.field::-webkit-search-decoration {
  display: none;
}
.move {
  cursor: move;
  overflow: hidden;
}
label,
.watch-thread-link {
  cursor: pointer;
}
a[href="javascript:;"] {
  text-decoration: none;
}
.warning {
  color: red;
}
#boardNavDesktop {
  display: none !important;
}
a {
  outline: none !important;
}
.painted {
  border-radius: 3px;
  padding: 0px 2px;
}
body>hr, .ad-plea-bottom + hr {
  display: none;
}
.board > hr:last-of-type {
  border-top-color: transparent !important;
}
div.navLinks {
  margin-bottom: -10px !important;
}
.ad-plea {
  display: none;
}
.ad-cnt {
  margin: 10px !important;
}

/* 4chan style fixes */
.opContainer, .op {
  display: block !important;
  overflow: visible !important;
}
.reply > .file > .fileText {
  margin: 0 20px;
}
.hashlink::before {
  content: ' ';
  visibility: hidden;
}
.inline + .hashlink,
[hidden] {
  display: none !important;
}
div.center:not(.ad-cnt) {
  display: none !important;
}
.page-num {
  margin-right: -8px;
}

/* fixed, z-index */
#overlay,
#fourchanx-settings,
#qp, #ihover,
#navlinks, .fixed #header-bar,
:root.float #updater,
:root.float #thread-stats,
#qr {
  position: fixed;
}
#fourchanx-settings {
  z-index: 999;
}
#overlay {
  z-index: 900;
}
#notifications {
  z-index: 70;
}
#qp, #ihover {
  z-index: 60;
}
#menu {
  z-index: 50;
}
#navlinks, #updater, #thread-stats {
  z-index: 40;
}
.fixed #header-bar.autohide {
  z-index: 35;
}
#qr {
  z-index: 30;
}
#thread-watcher {
  z-index: 8;
}
:root.fixed-watcher #thread-watcher {
  z-index: 20;
}
.fixed #header-bar {
  z-index: 10;
}
/* Header */
.fixed.top-header body {
  padding-top: 2em;
}
.fixed.bottom-header body {
  padding-bottom: 2em;
}
.fixed #header-bar {
  right: 0;
  left: 0;
  padding: 3px 4px 4px;
}
.fixed.top-header #header-bar {
  top: 0;
}
.fixed.bottom-header #header-bar {
  bottom: 0;
}
#header-bar {
  border-width: 0;
  transition: all .1s .05s ease-in-out;
}
:root.fixed #header-bar {
  box-shadow: -5px 1px 10px rgba(0, 0, 0, 0.20);
}
#custom-board-list .current {
  padding: 1px 1px 4px 1px;
}
:root.centered-links #shortcuts {
  width: 300px;
  text-align: right;
}
:root.centered-links #header-bar {
  text-align: center;
}
#board-list {
  font-size: 13px;
}
:root.centered-links #custom-board-list {
  position: relative;
  left: 150px;
}
.fixed.top-header #header-bar {
  border-bottom-width: 1px;
}
.fixed.bottom-header #header-bar {
  box-shadow: 0 -1px 2px rgba(0, 0, 0, .15);
  border-top-width: 1px;
}
.fixed.bottom-header #header-bar .menu-button i {
  border-top: none;
  border-bottom: 6px solid;
}
#board-list {
  text-align: center;
}
.fixed #header-bar.autohide:not(:hover) {
  box-shadow: none;
  transition: all .8s .6s cubic-bezier(.55, .055, .675, .19);
}
.fixed.top-header #header-bar.autohide:not(:hover) {
  margin-bottom: -1em;
  -webkit-transform: translateY(-100%);
  transform: translateY(-100%);
}
.fixed.bottom-header #header-bar.autohide:not(:hover) {
  -webkit-transform: translateY(100%);
  transform: translateY(100%);
}
#scroll-marker {
  left: 0;
  right: 0;
  height: 10px;
  position: absolute;
}
:root:not(.autohide) #scroll-marker {
  pointer-events: none;
}
#header-bar #scroll-marker {
  display: none;
}
.fixed #header-bar #scroll-marker {
  display: block;
}
.fixed.top-header #header-bar #scroll-marker {
  top: 100%;
}
.fixed.bottom-header #header-bar #scroll-marker {
  bottom: 100%;
}
#header-bar a:not(.entry):not(.close) {
  text-decoration: none;
}
#header-bar a:not(.entry):not(.close):not(.current) {
  padding: 1px;
}
#header-bar input {
  margin: 0;
  vertical-align: bottom;
}
#shortcuts:empty {
  display: none;
}
.brackets-wrap::before {
  content: "\\00a0[";
}
.brackets-wrap::after {
  content: "]\\00a0";
}
.dead-thread,
.disabled {
  opacity: .45;
}
#shortcuts {
  float: right;
}
.shortcut {
  margin-left: 3px;
}
#navbotright,
#navtopright {
  display: none;
}
#toggleMsgBtn {
  display: none !important;
}
.current {
  font-weight: bold;
}
/* 4chan X link brackets */
.brackets-wrap::before {
  content: "[";
}
.brackets-wrap::after {
  content: "]";
}
/* Notifications */
#notifications {
  position: fixed;
  top: 0;
  height: 0;
  text-align: center;
  right: 0;
  left: 0;
  transition: all .8s .6s cubic-bezier(.55, .055, .675, .19);
}
.fixed.top-header #header-bar #notifications {
  position: absolute;
  top: 100%;
}
.notification {
  color: #FFF;
  font-weight: 700;
  text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
  box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
  border-radius: 2px;
  margin: 1px auto;
  width: 500px;
  max-width: 100%;
  position: relative;
  transition: all .25s ease-in-out;
}
.notification.error {
  background-color: hsla(0, 100%, 38%, .9);
}
.notification.warning {
  background-color: hsla(36, 100%, 38%, .9);
}
.notification.info {
  background-color: hsla(200, 100%, 38%, .9);
}
.notification.success {
  background-color: hsla(104, 100%, 38%, .9);
}
.notification a {
  color: white;
}
.notification > .close {
  padding: 7px;
  top: 0px;
  right: 5px;
  position: absolute;
}
.notification > .fa-times::before {
  font-size: 11px !important;
}
/* ... */

